--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,6 @@ images/
 # Ignore system files
 .DS_Store
 Thumbs.db
+
+# Ignore all images in the first miniproject folder
+Images for first miniproject/*
